--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -38,5 +38,5 @@ COPY . .
 
 # Run the command to start your application
 EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0"]
+CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0"]
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
