--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Nikro"]
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.104.1"
+uvicorn = "^0.27.0"
 
 [tool.poetry.dev-dependencies]
 
