--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "scripts": {
     "prepare": "husky install",
-    "lint": "eslint . --fix"
+    "lint": "eslint ./app --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint ./app --ext .js,.jsx,.ts,.tsx --fix"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
-    "eslint": "^8.54.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "prettier": "^3.3.3"
   }
 }
